Improve & fix gap

--- a/src/scss/_classes.scss
+++ b/src/scss/_classes.scss
@@ -77,11 +77,15 @@
 }
 
 /********** GAP **********/
-@include gap("tn");
+@each $key, $value in $gap {
+  @include gap($key, "tn");
+}
 
-@each $key, $value in $breakpoints {
-  @media (min-width: $value) {
-    @include gap($key);
+@each $type, $breakpoint in $breakpoints {
+  @media (min-width: $breakpoint) {
+    @each $key, $value in $gap {
+      @include gap($key, $type);
+    }
   }
 }
 
